--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>deez</title>
   </head>
   <body>
-    <h1>hi aaron i knew u would cum</h1>
+    <h1>press button below 10 times to get surprised</h1>
+    <button>press me</button>
+    <script src="app.js"></script>
   </body>
 </html>
