--- a/index.html
+++ b/index.html
@@ -7,8 +7,16 @@
     <title>deez</title>
   </head>
   <body>
-    <h1>press button below 10 times to get surprised</h1>
-    <button>press me</button>
+    <form action="">
+      <input
+        type="text"
+        placeholder="input your name idot"
+        id="name"
+        autofocus
+      />
+      <input type="submit" />
+    </form>
+
     <script src="app.js"></script>
   </body>
 </html>
