--- a/index.html
+++ b/index.html
@@ -4,19 +4,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>deez</title>
+    <title>DEEZ</title>
   </head>
   <body>
-    <form action="">
-      <input
-        type="text"
-        placeholder="input your name idot"
-        id="name"
-        autofocus
-      />
-      <input type="submit" />
-    </form>
-
+    <h1 id="header">DEZZ NTTS</h1>
+    <button id="red">red</button>
+    <button id="blue">blue</button>
+    <button id="green">green</button>
     <script src="app.js"></script>
   </body>
 </html>
