--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
   </head>
   <body>
     <h1 id="header">DEZZ NTTS</h1>
-    <button id="red">red</button>
-    <button id="blue">blue</button>
-    <button id="green">green</button>
+    <button data-color="red">red</button>
+    <button data-color="blue">blue</button>
+    <button data-color="green">green</button>
     <script src="app.js"></script>
   </body>
 </html>
