--- a/index.html
+++ b/index.html
@@ -4,13 +4,15 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>DEEZ</title>
+    <title>Document</title>
   </head>
   <body>
-    <h1 id="header">DEZZ NTTS</h1>
-    <button data-color="red">red</button>
-    <button data-color="blue">blue</button>
-    <button data-color="green">green</button>
+    <h1>tdo</h1>
+    <ul id="tasks"></ul>
+    <form action="">
+      <input id="task" placeholder="New tdo" type="text" />
+      <input type="submit" />
+    </form>
     <script src="app.js"></script>
   </body>
 </html>
