--- a/index.html
+++ b/index.html
@@ -7,12 +7,6 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>tdo</h1>
-    <ul id="tasks"></ul>
-    <form action="">
-      <input id="task" placeholder="New tdo" type="text" />
-      <input type="submit" />
-    </form>
-    <script src="app.js"></script>
+    DEEZ
   </body>
 </html>
