--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
   </head>
   <body>
-    DEEZ
+    <img src="https://media.giphy.com/media/Vuw9m5wXviFIQ/giphy.gif" alt="" />
   </body>
 </html>
