--- a/freevbucks.html
+++ b/freevbucks.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>DDE</title>
+    <title>LLL</title>
   </head>
   <body>
-    <a href="freerobux.html">free robux</a>
-    <a href="freevbucks.html">free vbucks</a>
+    <img
+      src="https://media.giphy.com/media/JrkQ79ZpfZdn5iOwlr/giphy-downsized-large.gif"
+      alt=""
+    />
   </body>
 </html>
