--- a/index.html
+++ b/index.html
@@ -9,5 +9,10 @@
   <body>
     <a href="freerobux.html">free robux</a>
     <a href="freevbucks.html">free vbucks</a>
+
+    <button class="button">count</button>
+    <h1 class="num">0</h1>
+
+    <script src="button.js"></script>
   </body>
 </html>
