--- a/changestyleproperties.html
+++ b/changestyleproperties.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>LLL</title>
+    <title>Change Style Properties</title>
   </head>
   <body>
-    <img
-      src="https://media.giphy.com/media/JrkQ79ZpfZdn5iOwlr/giphy-downsized-large.gif"
-      alt=""
-    />
+    <h1>Hung</h1>
+    <button id="Red">Red</button>
+    <button id="Blue">Blue</button>
+    <button id="Green">Green</button>
   </body>
 </html>
