--- a/counter.html
+++ b/counter.html
@@ -4,9 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>NOOB</title>
+    <title>Counter</title>
   </head>
   <body>
-    <img src="https://media.giphy.com/media/Vuw9m5wXviFIQ/giphy.gif" alt="" />
+    <a href="index.html">Home</a>
+
+    <h1>0</h1>
+    <button id="button">Count</button>
+
+    <script src="counter.js"></script>
   </body>
 </html>
