--- a/form.html
+++ b/form.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>DDE</title>
+    <title>Form</title>
   </head>
   <body>
-    <a href="counter.html">counter</a>
-    <a href="textchangeloop.html">text change loop</a>
-    <a href="form.html">form</a>
-    <a href="changestyleproperties">change style properties</a>
+    <form action="">
+      <input autofocus placeholder="name" id="name" type="text" />
+      <input type="submit" value="submit" />
+    </form>
+
+    <script src="form.js"></script>
   </body>
 </html>
