--- a/textchangeloop.html
+++ b/textchangeloop.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>DDE</title>
+    <title>Text Change Loop</title>
   </head>
   <body>
-    <a href="counter.html">counter</a>
-    <a href="textchangeloop.html">text change loop</a>
-    <a href="form.html">form</a>
-    <a href="changestyleproperties">change style properties</a>
+    <h1>Hello</h1>
+    <button>Change</button>
+
+    <script src="textchangeloop.js"></script>
   </body>
 </html>
