--- a/changestyleproperties.html
+++ b/changestyleproperties.html
@@ -7,9 +7,13 @@
     <title>Change Style Properties</title>
   </head>
   <body>
-    <h1>Hung</h1>
-    <button id="Red">Red</button>
-    <button id="Blue">Blue</button>
-    <button id="Green">Green</button>
+    <a href="index.html">Home</a>
+    <h1>Hello</h1>
+    <select name="" id="">
+      <option value="red">Red</option>
+      <option value="green">Green</option>
+      <option value="blue">Blue</option>
+    </select>
+    <script src="changestyleproperties.js"></script>
   </body>
 </html>
