--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <a href="counter.html">counter</a>
     <a href="textchangeloop.html">text change loop</a>
     <a href="form.html">form</a>
-    <a href="changestyleproperties">change style properties</a>
+    <a href="changestyleproperties.html">change style properties</a>
+    <a href="tasks.html">tasks</a>
   </body>
 </html>
