--- a/tasks.html
+++ b/tasks.html
@@ -4,15 +4,18 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Form</title>
+    <title>Tasks</title>
   </head>
   <body>
     <a href="index.html">Home</a>
+
+    <h1>Tasks</h1>
+    <ul></ul>
     <form action="">
-      <input autofocus placeholder="name" id="name" type="text" />
-      <input type="submit" value="submit" />
+      <input id="task" placeholder="task" type="text" />
+      <input id="submit" type="submit" value="Submit" />
     </form>
 
-    <script src="form.js"></script>
+    <script src="tasks.js"></script>
   </body>
 </html>
