--- a/textchangeloop.html
+++ b/textchangeloop.html
@@ -7,6 +7,7 @@
     <title>Text Change Loop</title>
   </head>
   <body>
+    <a href="index.html">Home</a>
     <h1>Hello</h1>
     <button>Change</button>
 
