RICK CLASS UPDATE

--- a/index.html
+++ b/index.html
@@ -4,13 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>DDE</title>
+    <title>Document</title>
   </head>
   <body>
-    <a href="counter.html">counter</a>
-    <a href="textchangeloop.html">text change loop</a>
-    <a href="form.html">form</a>
-    <a href="changestyleproperties.html">change style properties</a>
-    <a href="tasks.html">tasks</a>
+    <img src="https://media.giphy.com/media/Ju7l5y9osyymQ/giphy.gif" alt="" />
   </body>
 </html>
