--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <img src="https://media.giphy.com/media/Ju7l5y9osyymQ/giphy.gif" alt="" />
+    <audio src="trimmed.mp3" autoplay loop></audio>
 
     <br />
     <br />
