--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <img src="https://media.giphy.com/media/Ju7l5y9osyymQ/giphy.gif" alt="" />
-    <audio src="trimmed.mp3" autoplay loop></audio>
+    <audio id="my_audio" src="bg.mp3" loop="loop"></audio>
 
     <br />
     <br />
@@ -29,5 +29,7 @@
     <br />
 
     <img width="20" height="20" src="892782065727205396.png" alt="" />
+
+    <script src="app.js"></script>
   </body>
 </html>
