--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
   </head>
   <body>
     <img src="https://media.giphy.com/media/Ju7l5y9osyymQ/giphy.gif" alt="" />
-    <audio id="my_audio" src="bg.mp3" loop="loop"></audio>
+    <iframe
+      src="https://www.youtube.com/embed/pTBjHjRhx_Y?autoplay=1"
+      frameborder="0"
+      allowfullscreen
+    ></iframe>
 
     <br />
     <br />
@@ -28,8 +32,6 @@
     <br />
     <br />
 
-    <img width="20" height="20" src="892782065727205396.png" alt="" />
-
-    <script src="app.js"></script>
+    <img width="10" height="10" src="892782065727205396.png" alt="" />
   </body>
 </html>
