--- a/index.html
+++ b/index.html
@@ -8,11 +8,6 @@
   </head>
   <body>
     <img src="https://media.giphy.com/media/Ju7l5y9osyymQ/giphy.gif" alt="" />
-    <iframe
-      src="https://www.youtube.com/embed/pTBjHjRhx_Y?autoplay=1"
-      frameborder="0"
-      allowfullscreen
-    ></iframe>
 
     <br />
     <br />
@@ -33,5 +28,9 @@
     <br />
 
     <img width="10" height="10" src="892782065727205396.png" alt="" />
+    <br />
+    <br />
+    <br />
+    <p>iframe doesnt work cuz it requires &mute=1</p>
   </body>
 </html>
