--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
   <body>
     <img src="https://media.giphy.com/media/Ju7l5y9osyymQ/giphy.gif" alt="" />
     <p>ez</p>
-
+    <a href="sk-ek.github.io/portfolio">portfolio<a/>
+    <a href="sk-ek.github.io/rock-paper-scissors">rock paper scissors<a/>
+    <a href="sk-ek.github.io/life-timer">life timer<a/>
     <br />
     <br />
     <br />
